[Gold V] Title: AC, Time: 944 ms, Memory: 101664 KB -BaekjoonHub